hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tdarray.php.exp
File "tdarray.php", line 5, characters 24-30:
Invalid return type (Typing[4110])
File "tdarray.php", line 5, characters 37-42:
This is a darray
File "tdarray.php", line 5, characters 24-30:
It is incompatible with a dynamic value
File "tdarray.php", line 9, characters 21-40:
Invalid return type (Typing[4110])
File "tdarray.php", line 9, characters 47-65:
This is a darray
File "tdarray.php", line 9, characters 21-40:
It is incompatible with a dynamic value
